force-app/main/default/objects/custom_create63__c/custom_create63__c.object-meta.xml
<CustomObject>
    <label>Custom created object63</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects63</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>