force-app/main/default/objects/custom_create63__c/fields/custom_create_63field564__c.field-meta.xml
<CustomField>
    <fullName>custom_create_63field564__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 63field564</label>
    <type>Checkbox</type>
</CustomField>